# tcc-gerenciador-de-tarefas

./: .env.example  .gitignore  README.md  docker-compose.yml  test_integration.py  test_llama_parsing.py
backend/: .env.example  Dockerfile  locustfile.py  pyproject.toml
backend/application/services/: ai_insights_service.py  analytics_service.py  auth_service.py  chat_assistant_service.py  enhanced_gpt_service.py  gpt_service.py  notification_service.py
backend/application/use_cases/: create_task.py  manage_projects.py  manage_tasks.py
backend/domain/entities/: project.py  task.py  user.py  user_settings.py
backend/domain/repositories/: project_repository.py  task_repository.py  user_repository.py
backend/domain/utils/: datetime_utils.py
backend/domain/value_objects/: priority.py  task_status.py
backend/infrastructure/cache/: redis_cache.py
backend/infrastructure/database/: connection.py  models.py  postgresql_repository.py  user_settings_repository.py
backend/infrastructure/database/migrations/: 002_add_user_settings.sql  init.sql
backend/infrastructure/gpt/: openai_adapter.py
backend/infrastructure/llm/: llama_adapter.py  regex_parser.py
backend/presentation/: config.py  logging_config.py  main.py
backend/presentation/api/: dependencies.py  schemas.py
backend/presentation/api/middleware/: error_handler.py  logging_middleware.py  metrics_middleware.py  rate_limit.py
backend/presentation/websocket/: connection_manager.py  handlers.py
backend/tests/: test_auth_service.py  test_gpt_service.py  test_task_crud.py  test_tcc_evidence.py
(+59 files in other folders)
